--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -163,7 +163,6 @@ jobs:
             npm install                       
             npm audit fix --force --audit-level=critical
             npm audit fix --force --audit-level=critical
-# npm audit --audit-level=critical
 
   scan-backend:
     docker:
@@ -180,7 +179,6 @@ jobs:
             npm install 
             npm audit fix --force --audit-level=critical
             npm audit fix --force --audit-level=critical
-# npm audit --audit-level=critical
 
   deploy-infrastructure:
     docker:
@@ -218,11 +216,9 @@ jobs:
           paths:
             - project/.circleci/ansible/inventory.txt
       - destroy-environment
-      # Here's where you will add some code to rollback on failure
 
   configure-infrastructure:
     docker:
-      # Docker image here that supports Ansible
       - image: cimg/python:3.10   #Executor
     steps:
       - checkout
@@ -265,7 +261,6 @@ jobs:
             else
               echo "No migrations are pending" 
             fi
-# rolls back; should migration fail
       - destroy-environment
       - revert-migrations  
 
@@ -300,7 +295,6 @@ jobs:
             npm run build
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist            
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-# rolls back; should migration fail
       - destroy-environment
       - revert-migrations 
 
@@ -341,7 +335,6 @@ jobs:
             cd .circleci/ansible
             cat inventory.txt
             ansible-playbook -vvv -i inventory.txt deploy-backend.yml
-# rolls back; should migration fail
       - destroy-environment
       - revert-migrations 
 
@@ -377,15 +370,13 @@ jobs:
             else
               exit 1
             fi
-# rolls back; should migration fail
       - destroy-environment
       - revert-migrations  
 
   cloudfront-update:
     docker:
-      - image: cimg/base:stable   #Executor
-      # - image: circleci/node:13.8.0    #Executor
-      # - image: alpine:latest      #Executor
+      - image: cimg/base:stable   
+
     steps:
       - checkout
       - install_awscli
@@ -411,13 +402,12 @@ jobs:
             --stack-name InitalStack \
             --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}"
             echo Current Workflow ID: "${CIRCLE_WORKFLOW_ID:0:7}"
-# rolls back; should migration fail
       - destroy-environment
       - revert-migrations
 
   cleanup:
     docker:                                                                           
-      - image: cimg/base:stable   #Executor
+      - image: cimg/base:stable
     steps:
       - checkout
       - install_awscli
@@ -562,20 +552,20 @@ workflows:
           filters:
             branches:
               only: [main]
-      - configure-infrastructure:
-          requires: [deploy-infrastructure]
-      - run-migrations:
-          requires: [configure-infrastructure]
-      - deploy-frontend:
-          requires: [run-migrations]
-      - deploy-backend:
-          requires: [run-migrations]
-      - smoke-test:
-          requires: [deploy-backend, deploy-frontend]
-      - cloudfront-update:
-          requires: [smoke-test]
-      - cleanup:
-          requires: [cloudfront-update]
+      # - configure-infrastructure:
+      #     requires: [deploy-infrastructure]
+      # - run-migrations:
+      #     requires: [configure-infrastructure]
+      # - deploy-frontend:
+      #     requires: [run-migrations]
+      # - deploy-backend:
+      #     requires: [run-migrations]
+      # - smoke-test:
+      #     requires: [deploy-backend, deploy-frontend]
+      # - cloudfront-update:
+      #     requires: [smoke-test]
+      # - cleanup:
+      #     requires: [cloudfront-update]
       # # - configure-node-exporter:
       #     requires: [smoke-test]
       # - deploy-prometheus-server:
